--- a/women/client/pages/payment/payment.wxss
+++ b/women/client/pages/payment/payment.wxss
@@ -1,5 +1,136 @@
-@import "../template/commodity/template.wxss";
-.container {
+/* 地址 */
+.address_container {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+.address_no {
+  background-color: #ff66ff;
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+.address_yes {
+  color: #999;
+  width: 100%;
+}
+.address_message {
+  width: 100%;
+  color: black;
+  padding-top: 10px;
+  padding-bottom: 5px;
+}
+.name ,.phone {
+  width: 50%;
+  float: left;
+}
+
+.commodity {
+  margin-left: 10px;
+  margin-right: 10px;
+  border-bottom: 1px solid #ccc;  
+}
+
+/* 商品信息 */
+.shop_content {
+  width: 100%;
+  height: 80px;
+  padding-top:10px; 
+  /* border: 1px solid #f33; */
+  margin-bottom: 10px;
+}
+/* 图片 */
+.img_container {
+  width: 25%;
+  text-align: center;
+  float: left;
+  position: relative;
+}
+.img {
+  width: 90%;
+  height: 80px;
+  /* border: 1px solid #f33; */
+}
+.content_container {
+  width: 75%;
+  height: 80px;
+  float: left;
+}
+/* 标题和删除按钮 */
+.td {
+  /* border: 1px solid #f33; */
+  padding: 10rpx auto;
+}
+.title {
+  padding-left: 10rpx;
+}
+/* 尺寸、颜色 */
+.sc {
+  color: #666;
+  font-size: 12px;
+  padding-left: 10rpx;
+}
+/* 价格、数量 */
+.mc {
+  width: 100%;
+  padding-top: 10px;
+  padding-left: 10rpx;
+}
+.money {
+  width: 30%;
+  color: #f33;
+  float: left;
+}
+.count {
+  width: 70%;
+  float: right;
+  text-align: center;
+}
+
+.pay ,.all_money ,.leaveWord{
+  margin-left: 10px;
+  margin-right: 10px;
+  padding-top: 10px;
+  height: 50px;
+}
+.pay_continer ,.money_continer {
+  width: 100%;
+  height: 30px;
+  border-bottom: 1px solid #ccc;    
+}
+.weixin ,.money_text {
+  width: 50%;
+  height: 20px;
+  float: left;
+}
+.pay_icon ,.money_yuan{
+  width: 50%;
+  height: 20px;
+  float: left;
+}
+.pay_icon .icon {
+  float: right;
+  padding-right: 15px;
+}
+
+.money_text {
+  width: 30%;
+  height: 20px;
+  float: left;
+}
+.money_yuan{
+  width: 70%;
+  height: 20px;
+  float: left;
+}
+.jg {
+  height: 10px;
   background-color: #fff;
-  padding: 0 10rpx;
+  margin-left: 10px;
+  margin-right: 10px;
+  border-bottom: 1px solid #ccc; 
+}
+.addIndent{
+  margin-top:10px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
