--- a/women/client/pages/my/my.wxss
+++ b/women/client/pages/my/my.wxss
@@ -1,8 +1,7 @@
-Page {
-  background-color: #ccc;
-}
 .container {
   background-color: #fff;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .user_info {
