--- a/women/client/pages/payment/payment.wxss
+++ b/women/client/pages/payment/payment.wxss
@@ -24,6 +24,16 @@
   float: left;
 }
 
+.shopname {
+  margin-left: 10px;
+  padding-top: 10px;
+}
+
+.gd_view {
+  width: 100%;
+  height: 150px;
+}
+
 .commodity {
   margin-left: 10px;
   margin-right: 10px;
@@ -35,7 +45,6 @@
   width: 100%;
   height: 80px;
   padding-top:10px; 
-  /* border: 1px solid #f33; */
   margin-bottom: 10px;
 }
 /* 图片 */
@@ -86,51 +95,34 @@
   text-align: center;
 }
 
-.pay ,.all_money ,.leaveWord{
+.all_money {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+.money_continer{
+  width: 100%;
+  height: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #ccc;
+}
+.money_text ,.money_yuan {
+  width: 50%;
+  height: 20px;
+  float: left;
+}
+
+.leaveWord {
   margin-left: 10px;
   margin-right: 10px;
   padding-top: 10px;
-  height: 50px;
+  padding-bottom: 10px;
 }
-.pay_continer ,.money_continer {
-  width: 100%;
+.leaveWordInput {
   height: 30px;
-  border-bottom: 1px solid #ccc;    
-}
-.weixin ,.money_text {
-  width: 50%;
-  height: 20px;
-  float: left;
-}
-.pay_icon ,.money_yuan{
-  width: 50%;
-  height: 20px;
-  float: left;
-}
-.pay_icon .icon {
-  float: right;
-  padding-right: 15px;
 }
 
-.money_text {
-  width: 30%;
-  height: 20px;
-  float: left;
-}
-.money_yuan{
-  width: 70%;
-  height: 20px;
-  float: left;
-}
-.jg {
-  height: 10px;
-  background-color: #fff;
-  margin-left: 10px;
-  margin-right: 10px;
-  border-bottom: 1px solid #ccc; 
-}
 .addIndent{
-  margin-top:10px;
   margin-left: 10px;
   margin-right: 10px;
 }
