--- a/women/client/pages/red_bage/red_bage.wxss
+++ b/women/client/pages/red_bage/red_bage.wxss
@@ -1,1 +1,38 @@
-/* pages/red_bage/red_bage.wxss */
+.container {
+  margin-top: 15px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.no {
+  width:100%;
+  margin-top:200px;
+  text-align: center;
+}
+
+.yes {
+  background-color: red;
+  border: 1px solid yellowgreen;
+  width: 100%;
+  height: 80px;
+  color: #fff;
+}
+
+.name {
+  width: 70%;
+  height: 80px;
+  float: left;
+  font-size: 20px;
+  text-align: center;
+  margin-top: 30px;
+}
+
+.money {
+  width: 30%;
+  float: left;
+  text-align: center;  
+  font-size: 30px;
+  padding-top: 20px;  
+  padding-bottom: 20px;  
+  background-color: blueviolet;
+}
