--- a/women/client/app.wxss
+++ b/women/client/app.wxss
@@ -1,18 +1,20 @@
 /**app.wxss**/
 page {
   width: 100%;
+  height: 100%;
 }
-
+.container {
+  margin-left: 10px;
+  margin-right: 10px;
+}
 swiper {
   width: 100%;
   height: 500rpx;
 }
-
 swiper-item image{
   width: 100%;
   height: 500rpx;
 }
-
 view {
   font-family: 'Microsoft YaHei';
   font-size: 14px;
