--- a/women/client/pages/index/index.wxml
+++ b/women/client/pages/index/index.wxml
@@ -1,23 +1,29 @@
-<import src="../template/pbl/template.wxml" />
-<!-- 滑动视图 -->
-<swiper indicator-dots='true' autoplay='true' interval='5000'>
-  <swiper-item wx:for="{{swiper_datas}}" wx:for-item="item" wx:key="">
-    <image src='{{item.img_url}}'></image>
-  </swiper-item>
-</swiper>
-<!-- 按钮 -->
-<view class="btn_block">
-  <text id="tj" bindtap='tj' style='color:{{color_tj}}'>推荐商品</text>
-  <text bindtap='zx' style='color:{{color_zx}}'>最新商品</text>
-  <text bindtap='zr' style='color:{{color_zr}}'>最热商品</text>
-</view>
-<!-- 瀑布流 -->
-<view class="pbl1">
-  <block wx:for="{{pbl_datas}}" wx:key="" wx:for-item="item" wx:for-index="idx">
-    <view class="content_pbl">
-      <view class="pbl1_one" bindtap='toContent' data-id='{{item.commodity_id}}'>
-        <template is="pbl1" data="{{item}}" />
+<view class='container'>
+  <!-- 滑动视图 -->
+  <swiper indicator-dots='true' autoplay='true' interval='5000'>
+    <swiper-item wx:for="{{swiper_datas}}" wx:for-item="item" wx:key="">
+      <image src='{{item.img_url}}' data-id='{{item.swiper_id}}' bindtap='toContent'></image>
+    </swiper-item>
+  </swiper>
+  <!-- 按钮 -->
+  <view class="btn_block">
+    <text id="tj" bindtap='tj' style='color:{{color_tj}}'>推荐商品</text>
+    <text bindtap='zx' style='color:{{color_zx}}'>最新商品</text>
+    <text bindtap='zr' style='color:{{color_zr}}'>最热商品</text>
+  </view>
+  <!-- 瀑布流 -->
+    <block wx:for="{{pbl_datas}}" wx:key="" wx:for-item="item" wx:for-index="idx">
+      <view class="content_pbl">
+        <view class="pbl1_one" bindtap='toContent' data-id='{{item.commodity_id}}'>
+          <image class="pbl1_img" src="{{item.img_url}}"></image>
+          <view class='pbl1_title_view'>
+            <text class="pbl1_title">{{item.title}}</text>  
+          </view>
+          <view class='pbl1_money'>
+            <text class='pbl1_money_now'>￥{{item.money_now}}</text>
+            <text class='pbl1_money_old'>￥{{item.money_old}}</text>
+          </view>
+        </view>
       </view>
-    </view>
-  </block>
+    </block>
 </view>
