--- a/women/client/pages/index/index.wxss
+++ b/women/client/pages/index/index.wxss
@@ -1,12 +1,8 @@
-/**index.wxss**/
-@import "../template/pbl/template.wxss";
 
-.pbl1 {
-  width: 100%;
-}
+/* 按钮组 */
 .btn_block {
   width: 100%;
-  height: 60px;
+  height: 50px;
   display: flex;
 }
 .btn_block text{
@@ -14,4 +10,38 @@
   margin-top: 15px;
   text-align: center;
   font-size: 18px;
+}
+
+/* 瀑布流 */
+.pbl1_one {
+  width: 48%;
+  height: 460rpx;
+  margin: 1px 1%;
+  float: left;
+}
+.pbl1_img {
+  width: 100%;
+  height: 360rpx;
+}
+.pbl1_title_view {
+  width: 100%;
+  height: 46rpx;
+  font-size: 14px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space:nowrap;
+}
+.pbl1_money {
+  width: 100%;
+  height: 48rpx;
+}
+.pbl1_money_now {
+  float: left;
+  font-size: 12px;
+  color: red;
+}
+.pbl1_money_old {
+  float: right;
+  font-size: 12px; 
+  text-decoration:line-through;
 }
