--- a/women/client/pages/shop_content/shop_content.wxml
+++ b/women/client/pages/shop_content/shop_content.wxml
@@ -1,11 +1,12 @@
-<!-- 商品滑动图 -->
-<view style='margin-left: 10px;margin-right: 10px;'>
-<swiper indicator-dots='true' autoplay='true' interval='5000'>
-  <swiper-item wx:for="{{swiper_img}}" wx:for-item="item" wx:key="">
-    <image src='{{item.img_url}}'></image>
-  </swiper-item>
-</swiper>
+<import src="../template/lookImg/template.wxml" />
 <view class='container'>
+  <!-- 商品滑动图 -->
+  <swiper indicator-dots='true' autoplay='true' interval='5000'>
+    <swiper-item wx:for="{{swiper_img}}" wx:for-item="item" wx:key="">
+      <image src='{{item.img_url}}' data-url='{{item.img_url}}' bindtap='lookImg'></image>
+    </swiper-item>
+  </swiper>
+  <!-- 商品的参数 -->
   <view class='title'>
     <!-- 标题 -->
     <text>{{commodity_data.title}}</text>
@@ -13,7 +14,7 @@
   <view class='sales' bindtap='addFavorite' data-id='{{commodity_data.commodity_id}}'>
     <!-- 销量 -->
     <text>销量: {{commodity_data.sales}}</text>
-    <text class='like'>☆收藏</text>
+    <text class='like'>收藏</text>
   </view>
   <view class='money'>
     <!-- 价格 -->
@@ -22,53 +23,57 @@
     <!-- 快递 -->
     <text class='expressage'>{{commodity_data.expressage}} 元</text>
   </view>
-  <view class='specification'>
+  <view class='specification' bindtap='toAddCartOrBuy'>
     <!-- 规格尺码 -->
-    <text>规格：点击选择</text>
-    <!-- <text style='color:#666;'>颜色:{{commodity_data.color}}、尺码:{{commodity_data.size}}</text> -->
-    <!-- <text style='float:right;margin-right:2px;'>></text> -->
+    规格：<text style='color:#ccc;'>选择尺码、颜色</text>
+    <text style='float:right;'>></text> 
   </view>
   <view class='guarantee'>
     <!-- 保障 -->
-    <text>正品保障 发货&售后 七天退货</text>
+    保障：<text style='color:red;'> 正品保障; 发货&售后; 七天退货</text>
   </view>
   <view class='shipments'>
     <!-- 发货提供 -->
-    <text>该商品由xxx供货并提供发货</text>
+    发货：<text style='color:red;'> 该商品由xxx供货并提供发货.</text>
   </view>
-</view>
-<!-- 商品详情及推荐按钮组，锚点实现 -->
-<view class='buttons'>
-  <text class='btn1' style='color:red;'>商品详情</text>
-  <!-- <text class='btn2' bindtap='#tj'>为你推荐</text> -->
-</view>
-<!-- 商品详情图片组 -->
-<view wx:for="{{swiper_img}}" wx:key="" wx:for-item="item" wx:for-index="idx">
-  <image class='img' src="{{item.img_url}}"></image>
-</view>
-<!-- 为你推荐。。 -->
+  <view class='buttons'>
+    <text class='btn1' style='color:red;'>商品详情</text>
+    <!-- <text class='btn2' bindtap='#tj'>为你推荐</text> -->
+  </view>
+  <!-- 商品详情图片组 -->
+  <view wx:for="{{swiper_img}}" wx:key="" wx:for-item="item" wx:for-index="idx">
+    <image class='img' src="{{item.img_url}}"></image>
+  </view>
+  <!-- 为你推荐。。 -->
   <view class='tj' id='tj'>
     <text>End</text>
-  </view> 
-<!-- 自定义下部导航 -->
-<view class='footer' wx:if="{{footer}}">
-  <view class='tabar_bottom'>
-    <view class='sy' bindtap='tosy'>
-      <text>首页</text>
-    </view>
-    <view class='cart' bindtap='toCart'>
-      <text>购物车</text>
-    </view>
-    <view class='addCart' bindtap='toAddCartOrBuy'>
-      <text>加入购物车</text>
-    </view>
-    <view class='buy' bindtap='toAddCartOrBuy'>
-      <text>立即购买</text>
-    </view>
   </view>
 </view>
+<!-- 查看图片 -->
+<block wx:if="{{lookImg}}">
+    <template is="lookImg" data="{{look_img_url}}" />
+</block>
+<!-- 下部导航 -->
+<block  wx:if="{{footer}}">
+  <view class='footer'>
+    <view class='tabar_bottom'>
+      <view class='sy' bindtap='tosy'>
+        <text>首页</text>
+      </view>
+      <view class='cart' bindtap='toCart'>
+        <text>购物车</text>
+      </view>
+      <view class='addCart' bindtap='toAddCartOrBuy'>
+        <text>加入购物车</text>
+      </view>
+      <view class='buy' bindtap='toAddCartOrBuy'>
+        <text>立即购买</text>
+      </view>
+    </view>
+  </view>
+</block>
 <!-- 参数选择 -->
-<view wx:else>
+<block wx:else>
   <view class='param_contanier'>
     <view class='param_top' bindtap='setParamFalse'></view>
     <view class='param_bottom'>
@@ -78,28 +83,30 @@
             <text style='color:red;'>￥ {{commodity_data.money_now}}</text>
           </view>
           <view class='param_img_text2'>
-            <text>{{color_selected}} / {{size_selected}}</text>
+            <text style='color:red;'>{{color_selected}}</text>
+            <text> / </text>
+            <text style='color:red;'>{{size_selected}}</text>
           </view>
       </view>
       <view class='param_color'>
         <text class='param-title'>颜色</text>
-        <view class='param_radio'>
+        <view class='radio_container'>
           <radio-group class="radio-group" bindchange="radioColorChange">
-            <label class="radio" wx:for="{{commodity_data.color}}" wx:key="" wx:for-item="item" wx:for-index="index"  bindtap='bindSelected'>
-              <radio class="{{checked == true? 'radio_checked':''}}" value="{{item}}" hidden='true'></radio>
-                <text>{{item}}</text>
-            </label>
+            <view class='radio_value' wx:for="{{commodity_data.color}}" wx:key="" wx:for-item="item" wx:for-index="index">
+              <radio value="{{item}}"></radio>
+              <label class="radio_label"><text>{{item}}</text></label>
+            </view>
           </radio-group>
         </view>
       </view>
       <view class='param_size'>
         <text  class='param-title'>尺寸</text>
-        <view class='param_radio'>
+        <view class='radio_container'>
           <radio-group class="radio-group" bindchange="radioSizeChange">
-            <label class="radio" wx:for="{{commodity_data.size}}" wx:key="" wx:for-item="item" wx:for-index="index">
-              <radio value="{{item}}" checked="{{item.checked}}" hidden='true'></radio>
-              <text>{{item}}</text>
-            </label>
+            <view class='radio_value' wx:for="{{commodity_data.size}}" wx:key="" wx:for-item="item" wx:for-index="index">
+              <radio value="{{item}}"></radio>
+              <label class="radio_label"><text>{{item}}</text></label>
+            </view>
           </radio-group>
         </view>
       </view>
@@ -123,5 +130,4 @@
       </view>
     </view>
   </view>
-</view>
-</view>
+</block>
